# churenmei

./: .pre-commit-config.yaml  LICENSE  README.md  hello.py  pyproject.toml
src/: __init__.py  config.py  events.py  main.py  scene_manager.py
src/scenes/: __init__.py  base.py  game_over_scene.py  game_scene.py  start_scene.py
src/sprites/: __init__.py
